<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="messageOfPost" translatable="false"> Привет, это новая Нетология!
        Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу.
        Затем появились курсы по дизайну, разработке, аналитике и управлению.
        Мы растем сами и помогаем расти студентам: от новичков до уверенных профессионалов.
        Но самое важное остается с нами: мы верим, что в каждом есть сила, которая заставляет
        хотеть больше, целиться выше, бежать быстрее. Наша миссия - помочь встать
        на путь роста и начать цепочку перемен &#10230;  http://netolo.gy/fyb</string>
    <string name="nameOfAuthor" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="dateOfPost" translatable="false">21 мая в 18:36</string>
    <string name="numOfLikes" translatable="false">10</string>
    <string name="numOfShares" translatable="false">5</string>
    <string name="numOfViews" translatable="false">5</string>
    <string name="option">Options</string>
    <string name="toLike">Add to favorite</string>
    <string name="toShare">Share</string>
    <string name="toView">See views</string>

</resources>