<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/avatar_description"
        android:minWidth="30dp"
        android:minHeight="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/postDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/optionButton"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Имя автора поста" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="@id/authorName"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="@id/authorName"
        app:layout_constraintTop_toBottomOf="@+id/authorName"
        tools:text="01.01.2001" />

    <ImageButton
        android:id="@+id/optionButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/authorName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu_option_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,postDate, optionButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:ellipsize="end"
        android:linksClickable="true"
        app:layout_constraintTop_toBottomOf="@+id/headerTitle"
        tools:layout_editor_absoluteX="16dp"
        tools:text="Здесь могла быть Ваша реклама" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/postArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postMessage" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/toLike"
        app:layout_constraintEnd_toStartOf="@id/likesAmount"
        app:layout_constraintStart_toStartOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/groupLeft"
        app:srcCompat="@drawable/ic_favorite_border_24"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/toShare"
        app:layout_constraintEnd_toStartOf="@id/sharesAmount"
        app:layout_constraintStart_toEndOf="@id/likesAmount"
        app:layout_constraintTop_toTopOf="@id/groupLeft"
        app:srcCompat="@drawable/ic_share_24" />

    <ImageButton
        android:id="@+id/viewButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/toView"
        app:layout_constraintEnd_toStartOf="@id/viewsAmount"
        app:layout_constraintStart_toStartOf="@id/groupRight"
        app:layout_constraintTop_toTopOf="@id/groupRight"
        app:srcCompat="@drawable/ic_views_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/likesAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/likeButton"
        app:layout_constraintEnd_toStartOf="@id/shareButton"
        app:layout_constraintStart_toEndOf="@+id/likeButton"
        app:layout_constraintTop_toTopOf="@+id/likeButton"
        tools:text="10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sharesAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/shareButton"
        app:layout_constraintStart_toEndOf="@+id/shareButton"
        app:layout_constraintTop_toTopOf="@+id/shareButton"
        tools:text="5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/viewsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewButton"
        app:layout_constraintEnd_toEndOf="@id/optionButton"
        app:layout_constraintStart_toEndOf="@+id/viewButton"
        app:layout_constraintTop_toTopOf="@+id/viewButton"
        tools:text="5" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="likeButton,likesAmount, shareButton, sharesAmount"
        app:layout_constraintEnd_toStartOf="@id/groupRight"
        app:layout_constraintTop_toBottomOf="@id/postArea" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="viewButton, viewsAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/groupLeft"
        app:layout_constraintTop_toBottomOf="@id/postArea" />

</androidx.constraintlayout.widget.ConstraintLayout>